poc/tests/errors/test_FplVariableDuplicateInVariableList_var_declaration.fpl
TestNamespace
{
    inf
    {
        Test()
        {
            n,m,n: predicate

            premise:
                n
            conclusion:
                m
        }
    }

    theory {}
}

##############################

FplVariableDuplicateInVariableList:7:18: Variable n already listed at 7:14